Use dependency injection in SendLog class and refactoring